welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:24: error: ';' expected but 'else' found.
	} else {
          ^ColumnByColumn:34: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ColumnByColumn:37: error: expected start of definition
	override def forward()  {
                 ^ColumnByColumn:40: error: expected start of definition
	override def backward(i:Int) {
                 ^ColumnByColumn:43: error: expected start of definition
	override def backward() {
                 ^ColumnByColumn:46: error: Unmatched closing brace '}' ignored here
}
^